# phluyd-studio

./: .gitignore  CMakeLists.txt  README.md
physics/include/: moving_object.hpp  vec2d.hpp  vec3d.hpp  verlet_solver.hpp
physics/src/: verlet_solver.cpp
src/: main.cpp
